--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -28,9 +28,16 @@
 
 <br>
 <br>
-Make a few nice boxes and stuff. <br>
-Like a picture of cars on top, split boxes below. <br>
-Happy caller | Contact info.
+
+<div class="card" style="width: 50%;">
+    <img class="card-img-top" src="/static/images/cars.jpg" alt="Card image">
+    <div class="card-body">
+      
+We're happy to help you 24/7<br>
+Contact us by:<br>
+Telephone |  ### ### #### <br>
+Email | info@RealSteel.eu <br>
+
 
     
 </div>
