--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -29,35 +29,35 @@
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
         <h1>About Us</h1>
-  Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.
+  Welcome to Real Steel dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/images/Gramp.jpg" alt="Card image">
+        <img class="card-img-top" src="/static/images/older.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">robertperry</p>
-          <p>Robert Perry, the Elder</p>
-          <p class="card-text">Robert C. Perry, Fisherman and Mechanical Expert</p>
+          <p class="title">robert</p>
+          <p>Harry C. Perry</p>
+          <p class="card-text">Harry C. Perry, Fisherman and Mechanical Expert</p>
           <p>RobertPerry@email.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/images/younger.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">tobias</p>
+          <p>Tobias McVleuv</p>
+          <p class="card-text">Tobias, Master Craftsman and Sales Champion</p>
+          <p>tobe@gmail.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/images/blaqlady.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
+          <p class="title">leroy</p>
+          <p>LeRoy Jekins</p>
+          <p class="card-text">LeRoy, Technician</p>
           <p>person3@example.com</p>
         </div>
       </div>
